GNOME Bugzilla – Bug 751470
encodebin: Fix special case.
Last modified: 2015-10-02 14:26:13 UTC
Allows to run such a command line : gst-launch-1.0 uridecodebin uri=file:///home/meh/Music/sthg.mp4 ! \ encodebin profile-string="audio/x-wav|1" ! filesink location=sthg.wav Previously the code failed because wavenc is considered as a muxer. We still want encodebin to audio/x-wav as an AudioEncodingProfile, so this simple fix allows that. Ability to mux raw streams in containers such as matroskamux is a different issue.
Created attachment 306058 [details] [review] encodebin: Fix special case.
Review of attachment 306058 [details] [review]: Looks good.
Can't this kind of bug fixing go into the release?
Why was it not pushed in the last 2 months? If you think this is safe and solves an important problem, please merge it.
commit 0c0f80348801cea5f190e6b2024f4c0da5381efd Author: Mathieu Duponchelle <mathieu.duponchelle@opencreed.com> Date: Wed Jun 24 23:55:35 2015 +0200 encodebin: Fix special case Allows to run such a command line : gst-launch-1.0 uridecodebin uri=file:///home/meh/Music/sthg.mp4 ! \ encodebin profile-string="audio/x-wav|1" ! filesink location=sthg.wav Previously the code failed because wavenc is considered as a muxer. We still want encodebin to audio/x-wav as an AudioEncodingProfile, so this simple fix allows that. Ability to mux raw streams in containers such as matroskamux is a different issue. https://bugzilla.gnome.org/show_bug.cgi?id=751470